# AndroidLib

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/yuanbb/test/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/benny/libapp/: CardSlideListViewActivity.java  DataBindingActivity.java  DataBindingHandler.java  JNI2Test.java  JniTest.java
app/src/main/java/com/benny/libapp/orm/: UserBean.java
app/src/main/java/com/yuanbb/test/: MainActivity.java
app/src/main/java/com/yuanbb/test/activity/: CustomViewActivity.java  GridViewImageActivity.java
app/src/main/jni/: Java_com_benny_libapp_JniTest.c  com_benny_libapp_JNI2Test.cpp  com_benny_libapp_JNI2Test.h  com_benny_libapp_JniTest.cpp  com_benny_libapp_JniTest.h
app/src/main/res/layout/: activity_card_slide_list_view.xml  activity_custom_view.xml  activity_data_binding.xml  activity_grid_view_image.xml  activity_main.xml  content_custom_view.xml  content_main.xml  dialog_test.xml  dialog_text.xml  item_image.xml
app/src/main/res/menu/: menu_main.xml  menu_main_activity.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/yuanbb/test/: ExampleUnitTest.java
baselib/: build.gradle
ffmpeg/: build.gradle  (+1 more)
fmode/: CMakeLists.txt  build.gradle
fmode/src/androidTest/java/com/benny/fmode/: ExampleInstrumentedTest.java
fmode/src/main/: AndroidManifest.xml
fmode/src/main/java/com/benny/fmode/: MainActivity.java
fmode/src/main/jni/: common_platform.cpp
fmode/src/test/java/com/benny/fmode/: ExampleUnitTest.java
(+157 files in other folders)
